<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="10dp"
    xmlns:android="http://schemas.android.com/apk/res/android">


<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:text="Question"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="18dp"
        android:padding="5dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:text="@string/question_1"
        android:textStyle="bold"
        android:textSize="18dp"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginLeft="20dp"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/q1_yes_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/q1_no_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/question_2"
        android:textStyle="bold"
        android:textSize="18dp"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginLeft="20dp"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/q2_yes_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/q2_no_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No" />


    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/question_3"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginRight="20sp"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginLeft="20dp"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/q3_yes_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/q3_no_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No" />


    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/question_4"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginRight="20sp"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginLeft="20dp"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/q4_yes_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/q4_no_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No" />


    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:text="@string/question_5"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginRight="20sp"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginLeft="20dp"
        android:layout_gravity="start"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/q5_yes_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Yes" />

        <RadioButton
            android:id="@+id/q5_no_RB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="No" />


    </RadioGroup>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_height="wrap_content">

        <Button
            android:text="Cancel"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_margin="10dp"
            android:id="@+id/cancel_custom_alart"
            android:layout_height="wrap_content"/>

        <Button
            android:layout_marginRight="10dp"
            android:id="@+id/ok_custom_alart"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="ok"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</LinearLayout>


</RelativeLayout>